# ECSGame

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.in
scripts/: cmake-makefile.sh  cmake-xcode.sh  install-dependencies.sh
src/: arkanoid.cpp  arkanoid.h  ecs.cpp  ecs.h  main.cpp  tilemap.cpp  tilemap.h
